--- a/ModFinder_WOTR.csproj
+++ b/ModFinder_WOTR.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NexusModsNET" Version="1.0.4" />
     <PackageReference Include="Octokit" Version="0.50.0" />
   </ItemGroup>
 
