--- a/ModManifest/Master_Manifest.json
+++ b/ModManifest/Master_Manifest.json
@@ -31,7 +31,7 @@
             "Name": "Bubble Buffs",
             "ModType": 1,
             "Source": 1,
-            "NexusModID": 195:,
+            "NexusModID": "195",
             "OwnerAndRepo": [
                 "factubsio",
                 "BubbleBuffs"
@@ -41,7 +41,7 @@
             "Name": "ToyBox (a bag of tricks)",
             "ModType": 1,
             "Source": 1,
-            "NexusModID": 8:,
+            "NexusModID": "8",
             "OwnerAndRepo": [
                 "cabarius",
                 "ToyBox"
