--- a/ModManifest/Master_Manifest.json
+++ b/ModManifest/Master_Manifest.json
@@ -81,7 +81,7 @@
         },
         {
             "Name": "ToyBox (a bag of tricks)",
-            "Author": "Cabarius",
+            "Author": "Narria",
             "ModType": 1,
             "Source": 1,
             "NexusModID": "8",
