--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -1,9 +1,9 @@
 name: .NET Core
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 jobs:
   build:
     runs-on: ubuntu-latest
