--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -6,7 +6,7 @@ on:
     branches: [ master ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - name: Checkout GitHub actions
       uses: actions/checkout@v2
