--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -13,6 +13,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+    - name: Set up .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+      
     - name: Setup .NET 5.x
       uses: actions/setup-dotnet@v1
       with:
