--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -29,5 +29,11 @@ jobs:
       run: dotnet add package NexusModsNET
     - name: Install dependencies 3
       run: dotnet add package Octokit
+    - name: .Net Build
+  # You may pin to the exact commit or the version.
+  # uses: EasyDesk/action-dotnet-build@d2c47d8701e3ea8db03dcabaacb37204fe123a22
+      uses: EasyDesk/action-dotnet-build@v1.0.0
+      with:
+        path: "./ManifestUpdater/ManifestUpdater.csproj" # optional, default is .
     - name: Test code 
-      run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
+      run: dotnet test "./ManifestUpdater"
