--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -7,13 +7,15 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - name: Setup .NET 5.x
+    - name: Checkout GitHub actions
+      uses: actions/checkout@v2
+    - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        # Semantic version range syntax or exact version of a dotnet version
-        dotnet-version: '5.x'
-        
+        dotnet-version: 5.0.x
+    - name: Install dependencies
+      run: dotnet restore "./ManifestUpdater"
     - name: Build code
-      run: dotnet build "./ManifestUpdater" --configuration Release
+      run: dotnet build "./ManifestUpdater" --configuration Release --no-restore
     - name: Test code 
-      run: dotnet test "./ManifestUpdater" --configuration Release
+      run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
