--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Test code 
       run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
     - name: Test code 
-      run: dotnet run "./ManifestUpdater"
+      run: dotnet run --project ./ManifestUpdater
