--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - 'ManifestUpdater/Resources/internal_manifest.json'
 jobs:
+
   build:
     runs-on: windows-latest
     steps:
@@ -20,4 +21,4 @@ jobs:
     - name: Test code 
       run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
     - name: Test code 
-      run: dotnet run --project ./ManifestUpdater
+      run: dotnet run --project ./ManifestUpdater --${{ secrets.GITHUB_TOKEN }}
