--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -3,6 +3,9 @@ on:
   push:
     paths:
       - 'ManifestUpdater/Resources/internal_manifest.json'
+  #every 2 hours, 37 minutes past due to congestion and stuff
+  #schedule:
+  #- cron: "37 */2 * * *"
       
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -15,15 +18,15 @@ jobs:
 
     - name: Checkout GitHub actions
       uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Install dependencies
-      run: dotnet restore "./ManifestUpdater"
-    - name: Build code
-      run: dotnet build "./ManifestUpdater" --configuration Release --no-restore
-    - name: Test code 
-      run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
+  ##  - name: Setup .NET Core
+    ##  uses: actions/setup-dotnet@v1
+   ##   with:
+   ##     dotnet-version: 5.0.x
+   ## - name: Install dependencies
+   ##   run: dotnet restore "./ManifestUpdater"
+  ##  - name: Build code
+   ##   run: dotnet build "./ManifestUpdater" --configuration Release --no-restore
+   ## - name: Test code 
+  ##    run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
     - name: Test code 
       run: dotnet run --project ./ManifestUpdater 
