--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -22,11 +22,11 @@ jobs:
     ##  uses: actions/setup-dotnet@v1
    ##   with:
    ##     dotnet-version: 5.0.x
-   ## - name: Install dependencies
-   ##   run: dotnet restore "./ManifestUpdater"
+    - name: Install dependencies
+      run: dotnet restore "./ManifestUpdater"
   ##  - name: Build code
    ##   run: dotnet build "./ManifestUpdater" --configuration Release --no-restore
    ## - name: Test code 
   ##    run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
-    - name: Test code 
+    - name: Run Updater
       run: dotnet run --project ./ManifestUpdater 
