--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -18,10 +18,10 @@ jobs:
 
     - name: Checkout GitHub actions
       uses: actions/checkout@v2
-  ##  - name: Setup .NET Core
-    ##  uses: actions/setup-dotnet@v1
-   ##   with:
-   ##     dotnet-version: 5.0.x
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
     - name: Install dependencies
       run: dotnet restore "./ManifestUpdater"
   ##  - name: Build code
