--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -24,9 +24,9 @@ jobs:
         dotnet-version: 5.0.x
     - name: Install dependencies
       run: dotnet restore "./ManifestUpdater"
-  ##  - name: Build code
-   ##   run: dotnet build "./ManifestUpdater" --configuration Release --no-restore
-   ## - name: Test code 
-  ##    run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
+    - name: Build code
+      run: dotnet build "./ManifestUpdater" --configuration Release --no-restore
+    - name: Test code 
+      run: dotnet test "./ManifestUpdater" --no-restore --verbosity normal
     - name: Run Updater
       run: dotnet run --project ./ManifestUpdater 
