--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -4,8 +4,8 @@ on:
     paths:
       - 'ManifestUpdater/Resources/internal_manifest.json'
   #every 2 hours, 37 minutes past due to congestion and stuff
-  #schedule:
-  #- cron: "37 */2 * * *"
+  schedule:
+  - cron: "37 */2 * * *"
       
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
